--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-name: Build
 
 on:
   push:
@@ -20,7 +19,7 @@ jobs:
 
     - name: Configure MSVC environment
       run: |
-        cl /EHsc /std:c++17 /Fe:luajit-decompiler-v2.exe main.cpp
+        cl /EHsc /std:c++20 /J /Fe:luajit-decompiler-v2.exe main.cpp
         ls
         tree .
 
